# vulkan-stuff

./: .clang-tidy  .cmakelintrc  .envrc  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  default.nix  flake.nix
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
shaders/: colored_triangle.frag  colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv
src/: CMakeLists.txt  engine.hpp  helpers.cpp  main.cpp  object.cpp
src/engine/: CMakeLists.txt  bootstrap.cpp  bootstrap.hpp  common.cpp  common.hpp  engine.cpp  engine.hpp  gltf.cpp  gltf.hpp  helpers.cpp  helpers.hpp  loadMesh.cpp  loadMesh.hpp  main.cpp  monkey_head.cpp  monkey_head.hpp  object.cpp  object.hpp  struct.cpp  struct.hpp  viking_room.cpp  viking_room.hpp
src/engine/shaders/: basic.vert
src/engine/vulkan/: pipelinebuilder.cpp  swapchain.cpp  swapchain.hpp
src/shaders/: CMakeLists.txt  basic.frag
src/testbed/: CMakeLists.txt  main.cpp
src/testengine1/: CMakeLists.txt  helpers.cpp  object.hpp
src/testengine1/vulkan/: ini.hpp  pipelinebuilder.hpp
src/tutorial/: CMakeLists.txt  engine.cpp  helpers.hpp  impl.cpp  main.cpp  object.cpp  struct.cpp  struct.hpp
src/tutorial/shaders/: CMakeLists.txt
src/tutorial/vulkan/: util.cpp  util.hpp
src/vulkan/: util.cpp
